--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
     <footer style="background-color:black;">
         <!-- <span class="far fa-copyright"></span> 2021 All rights reserved.
         </span> -->
-        <span>Created By <a href="https://ashishprofile.netlify.app/">Ashish</a> | <span
+        <span>Created By <a href="https://www.linkedin.com/in/suraj-kumar-mandal-462a931aa/">Suraj Mandal</a> | <span
                 class="far fa-copyright"></span> 2021 All rights
             reserved.</span>
         <button class="btn btn-primary scroll-top" data-scroll="up" type="button">
