--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <nav class="navbar navbar-expand-md ">
         <a href="#home" style="text-decoration: red;">
-            <h1 style="color: red;" class="covid"> COVID-19 Tracker</h1>
+            <h1 style="color: rgb(44, 238, 60);" class="covid"> COVID-19 Tracker</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -352,7 +352,7 @@
         <!-- <span class="far fa-copyright"></span> 2021 All rights reserved.
         </span> -->
         <span>Created By <a href="https://www.linkedin.com/in/suraj-kumar-mandal-462a931aa/">Suraj Mandal</a> | <span
-                class="far fa-copyright"></span> 2021 All rights
+                class="far fa-copyright"></span> 2022 All rights
             reserved.</span>
         <button class="btn btn-primary scroll-top" data-scroll="up" type="button">
             <i class="fa fa-chevron-up"></i>
