--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
     <footer style="background-color:black;">
         <!-- <span class="far fa-copyright"></span> 2021 All rights reserved.
         </span> -->
+        <a class="libutton" href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=suraj-kumar-mandal-462a931aa" target="_blank">Follow on LinkedIn</a>
         <span>Created By <a href="https://www.linkedin.com/in/suraj-kumar-mandal-462a931aa/">Suraj Mandal</a> | <span
                 class="far fa-copyright"></span> 2022 All rights
             reserved.</span>
